[gd_scene load_steps=12 format=2]

[ext_resource path="res://code/explosive.gd" type="Script" id=1]
[ext_resource path="res://sound/explosion.ogg" type="AudioStream" id=2]
[ext_resource path="res://textures/particles/explosions.png" type="Texture" id=3]

[sub_resource type="CylinderMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="BoxShape" id=3]

[sub_resource type="BoxShape" id=4]

[sub_resource type="SpatialMaterial" id=5]
params_diffuse_mode = 2
params_specular_mode = 2
params_blend_mode = 3
params_depth_draw_mode = 2
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 1.61
emission_operator = 0
emission_on_uv2 = false
emission_texture = ExtResource( 3 )

[sub_resource type="ParticlesMaterial" id=6]
emission_shape = 1
emission_sphere_radius = 3.84
gravity = Vector3( 0, 0, 0 )

[sub_resource type="SphereMesh" id=7]
radius = 0.5
height = 1.0

[sub_resource type="BoxShape" id=8]

[node name="RigidBody" type="StaticBody" groups=[
"explosive",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.28579, -5.95419, 0 )
script = ExtResource( 1 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.10623e-06, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="Area6" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.62939e-06, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area6"]
transform = Transform( 4.04451, 0, 0, 0, 3.41364, 0, 0, 0, 4.29017, 0.0106301, 0, 0 )
shape = SubResource( 4 )

[node name="Particles" type="Particles" parent="Area6"]
transform = Transform( 1, 8.29044e-16, 1.47268e-30, -8.29044e-16, 1, 1.77636e-15, 9.40395e-38, -1.77636e-15, 1, -1.94217e-14, 1.77636e-15, 5.96046e-08 )
material_override = SubResource( 5 )
emitting = false
amount = 700
one_shot = true
explosiveness = 0.8
randomness = 1.0
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 7 )
__meta__ = {
"_editor_description_": ""
}

[node name="Timer" type="Timer" parent="."]

[node name="Area2" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area2"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 0, 0 )
shape = SubResource( 8 )

[node name="exploding" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
unit_db = 5.443
unit_size = 7.9
max_db = 6.0
pitch_scale = 0.63
__meta__ = {
"_editor_description_": ""
}
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
